// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBarItem renders SideBarItem 1`] = `
<MenuItem
  className="side-bar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        size="large"
      />
    </span>
    <span />
  </div>
</MenuItem>
`;

exports[`SideBarItem renders highlighed SideBarItem that navigates to /feed/trending 1`] = `
<MenuItem
  className="side-bar-item highlight-item"
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;

exports[`SideBarItem renders non-highlight SideBarItem that navigates to /feed/trending 1`] = `
<MenuItem
  className="side-bar-item "
>
  <div
    className="sidebar-item-alignment-container"
  >
    <span>
      <Icon
        as="i"
        name="fire"
        size="large"
      />
    </span>
    <span>
      Trending
    </span>
  </div>
</MenuItem>
`;
